# modernisation-platform-environments

./: .gitattributes  .gitignore  .trivyignore.yaml  README.md  example-upload.csv  example.tar
.devcontainer/: COPILOT_MCP.md  COPILOT_MCP_SERVERS.md  README.md  devcontainer-lock.json  devcontainer.json  post-create.sh
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  labeler.yml
.github/agents/: cert-manager-maintenance.agent.md  cluster-autoscaler-maintenance.agent.md  external-dns.maintenance.agent.md  external-secrets.maintenance.agent.md  ingestion.agent.md  ingress-nginx.maintenance.agent.md  karpenter.maintenance.agent.md  keda.maintenance.agent.md  kube-prometheus-stack-maintenance.agent.md  kyverno.maintenance.agent.md  terraform-maintenance-major.agent.md  terraform-maintenance.agent.md  velero.maintenance.agent.md
.github/config/: skip-plan-evaluator-workspaces.json
.github/workflows/: ami_cleanup.yml  analytical-platform-common.yml  analytical-platform-compute.yml  analytical-platform-data.yml  apex.yml  (+183 more)
docs/: GITHUB_COPILOT_AGENTS.md  GITHUB_COPILOT_MCP_SERVERS.md
megalinter-reports/: IDE-config.txt
policies/: README.md
scripts/: ami_cleanup.sh  aws.sh  bootstrap-api-credentials.sh  ebs_cleanup.sh  enhance-scp-error.sh  generate-dependabot-file.sh  generate-nuke-config.sh  member-local-plan.sh  member-static-analysis.sh  nuke-config-template.txt  nuke.sh  poll-clean-file-notification.sh  provision-terraform-workspaces.sh  redact-output.sh  replace-vpn-tunnel.sh  share-ec2-snapshot.sh  terraform-apply-after-nuke.sh  terraform-apply.sh  terraform-destroy.sh  terraform-import.sh  terraform-init.sh  terraform-plan-evaluator.sh  terraform-plan-tag-impact.sh  terraform-remove.sh  upload-file-via-api.sh  upload-multipart-parts.sh
terraform/environments/ccms-ebs/lambda/cloudwatch-slack-integration-v2/: lambda_function.py  pyproject.toml  test_lambda_function.py
terraform/environments/ccms-ebs/lambda/maintenance_announcements/: lambda_function.py  pyproject.toml
(+7654 files in other folders)
